# lcs_rs

./: Cargo.toml  README.md
benches/: lcs.rs
src/: lcs.rs  lib.rs  main.rs
src/lcs/: sais.rs
test_files/: small_test.1  test_file0  test_file1
