[package]
name = "lcs_rs"
version = "0.1.0"
authors = ["William Arnold <will748@gmail.com>"]
description = "A longest common byte sequence finder for arbitrary files, in *linear time*"
readme = "README.md"
homepage = "https://gitlab.com/aphoh/lcs_rs"
repository = "https://gitlab.com/aphoh/lcs_rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio    = "0.30.0"
num-integer = "*"
num-traits  = "*"
vec_map     = "*"
bv          = "*"
bit-set     = "*"

clap        = "2.33.0"

[dev-dependencies]
criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4" }

[[bench]]
name = "lcs"
harness = false

[[bin]]
name = "lcs_rs"

